--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-    "start": "next start"
+    "start": "next start",
+    "predeploy": "npm un build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "next": "10.2.3",
@@ -18,5 +20,8 @@
     "react-youtube": "^7.13.1",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
