--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "portfolio_nextjs",
   "version": "0.1.0",
+  "homepage": "https://danielvnguyen.github.io",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "predeploy": "npm un build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
