update homepage url, move styles

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio_nextjs",
   "version": "0.1.0",
-  "homepage": "https://danielvnguyen.github.io",
+  "homepage": "https://danielvnguyen.ca",
   "private": true,
   "scripts": {
     "dev": "next dev",
