--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
-    "next": "10.2.3",
+    "next": "^10.2.3",
     "particles-bg": "^2.5.5",
     "react": "17.0.2",
     "react-background-animation": "^1.0.1",
